--- a/style.css
+++ b/style.css
@@ -10,4 +10,59 @@
     --whitesnoke:#f9f9f9;
     --light-grey:#ececec;
     --grey:#c4c4c4;
+    --mediun-gray:#a7a7a7;
+    --deep-gray:#343434;
+    --black:#000;
+    --blue:#1b77f3;
+    --red:#cf3c3f;
+}
+
+.login{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    min-height: 100vh;
+    padding: clamp(35px, 5%, 700px);
+   
+    
+}
+.login-logo{
+    width: 130px;
+    margin-bottom: 80px;
+}
+.login-title{
+    color: var(--deep-gray);
+    font-size: 1.5em;
+}
+.label-login{
+display: block;
+margin-bottom: 20px;
+width: 100%;
+margin-bottom: 30px;
+}
+.input{
+    width: 100%;
+    background-color: var(--light-grey);
+    border: 2px solid rgb(0,0,0,0);
+    border-radius: 5px;
+    outline: none;
+    font-size: 0.7em;
+    padding: 25px 10px 10px;
+    font-weight: 600;
+    color: var(--deep-gray);
+}
+.label-login span{
+    position: absolute;
+    font-size: 0.8em;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--mediun-gray);
+    margin:20px;
+    cursor: text;
+}
+.input:focus{/* server para fazer alteração focada*/
+    background-color: var(--whitesnoke);
+    border: 2px solid var(--deep-gray);
 }
