--- a/style.css
+++ b/style.css
@@ -17,21 +17,31 @@
     --blue:#1b77f3;
     --red:#cf3c3f;
 }
+main{
+    display: flex;
+}
 
 .login{
     display:flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 500px;
+    max-width: 400px;
     min-height: 100vh;
-    padding: clamp(35px, 5%, 700px);
+    padding: clamp(30px, 0%, 45px);
+    justify-content: space-between;
    
-    
+}
+.wrepper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .login-logo{
-    width: 130px;
-    margin-bottom: 80px;
+    width: 100px;
+    margin-bottom: 40px;
 }
 .login-title{
 
@@ -41,9 +51,8 @@
 }
 .label-login{
 display: block;
-margin-bottom: 20px;
 width: 100%;
-margin-bottom: 30px;
+margin-bottom: 20px;
 }
 .input{
     width: 100%;
@@ -101,3 +110,76 @@ margin-bottom: 30px;
 #apple{
     background-color: var(--black);
 }
+.login-checkbox{
+    width: 100%;
+    margin: 15px 0 50px;
+    font-size: 0.9em;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+.input-checkbox{
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 3px;
+    background-color: var(--light-grey);
+    margin-right: 8px;
+
+}
+.input-checkbox:checked{
+    background-color: var(--red);
+}
+.input-checkbox:checked::after{
+    content: "";
+    display: block;
+    width: 5px;
+    height: 10px;
+    border: 3px solid var(--white);
+    border-width: 0 3px 3px 0 ;
+    transform: rotate(45deg);
+    margin: 1px 5px;
+
+}
+.bnt-login{
+    width: 60px;
+    height: 60px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--red);
+    border-radius: 18px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 30px;
+}
+i{
+    color: var(--white
+    );
+    font-size: 25px;
+    
+}
+.bnt-login:disabled{
+    cursor: auto;
+    border:2px solid var(--light-grey);
+    background-color: var(--white);
+}
+.bnt-login:disabled i {
+    color: var(--grey);
+}
+.link-login{
+    font-size: 15px;
+    color: var(--mediun-gray);
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.hero{
+    width: 100%;
+    background-image: url(imagens/wallpaper.jpg);
+    background-size: cover;
+    background-position: center;
+    flex: 1;
+}
+
